# notes

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: build_docs.yml  ci.yml
about/me/: index.html
about/this-site/: index.html
blog/: index.html
blog/archive/2023/: index.html
blog/category/performance/: index.html
docs/: CNAME  _config.yml  index.md  page1.md  page2.md  tags.md
docs/about/: this-site.md
docs/blog/: .authors.yml
docs/blog/posts/: post-test.md
docs/dgamboa-notes/: about-me.md  about-this-site.md
docs/python/: index.md  page-1.md  page-2.md
docs/topics/: index.md  placeholder.md
docs/topics/3d-print/: index.md
docs/topics/docker/: index.md
docs/topics/git/: index.md  remove_leaked_env.md
docs/topics/home-automation/: index.md
docs/topics/linux/: index.md
docs/topics/python/: index.md  string.md
docs/topics/python/libraries/: arrow.md  base.md  pydantic.md
docs/topics/self-hosting/: index.md
material/overrides/: main.html
search/: search_index.json
tags/: index.html
topics/: index.html
topics/3d-printing/: index.html
topics/docker/: index.html
topics/git/remove_leaked_env/: index.html
topics/home-automation/: index.html
topics/linux/: index.html
topics/linux/commands/advanced/: index.html
topics/linux/commands/basic/: index.html
topics/placeholder/: index.html
topics/python/: index.html
topics/python/libraries/arrow/: index.html
topics/python/string/: index.html
topics/self-hosting/: index.html
(+5 files in other folders)
