[tool.poetry]
name = "dgamboa-notes"
version = "0.1.0"
description = "Notes and code snippets"
authors = ["difegam <difegam3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = {extras = ["imaging"], version = "^9.5.14"}
mkdocs-git-revision-date-localized-plugin = "^1.2.4"
mkdocs-git-authors-plugin = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
